# pktrace

./: .gitignore  CMakeLists.txt  start.sh
config/: config.h  tracerConfig.h
header/: color.h  console.h  debug.h  engine.h  global.h  script.h
header/audio/: audio.h  channel.h  midi.h  midiPlayer.h  synth.h  track.h
header/img/: bmp.h  img.h
header/misc/: abs.h  clamp.h  euler.h  fixedString.h  getHex.h  list.h  minMax.h  misc.h  strLen.h
header/render/: color.h  font.h  render.h
header/ui/: menu.h  menuElement.h
scripts/header/: camera.h  fcolor.h  light.h  material.h  outputWriter.h  texture.h  tracer.h  world.h
scripts/header/atmo/: atmo.h  globalHaze.h  sphereHaze.h
scripts/header/math/: atmoResult.h  collisionResult.h  degRad.h  lerp.h  matrix.h  noise.h  random.h  ray.h  trig.h  trigValues.h  vector.h
scripts/header/object/: cube.h  object.h  plane.h  sphere.h  triangle.h
scripts/header/post/: adjacentAverage.h  bloomEffect.h  pixelLerp.h  post.h  postEffect.h
scripts/source/: camera.cpp  fcolor.cpp  light.cpp  main.cpp  material.cpp  outputWriter.cpp  texture.cpp  tracer.cpp  world.cpp
scripts/source/atmo/: atmo.cpp  globalHaze.cpp  sphereHaze.cpp
scripts/source/math/: lerp.cpp  matrix.cpp  noise.cpp  random.cpp  trig.cpp  vector.cpp
scripts/source/object/: cube.cpp  object.cpp  plane.cpp  sphere.cpp  triangle.cpp
scripts/source/post/: adjacentAverage.cpp  bloomEffect.cpp  pixelLerp.cpp  post.cpp  postEffect.cpp
source/: console.cpp  consoleParser.cpp  engine.cpp  event.cpp  global.cpp  input.cpp  main.cpp
source/audio/: audio.cpp  midi.cpp  midiPlayer.cpp  synth.cpp
source/img/: bmp.cpp  img.cpp
source/misc/: fixedString.cpp  misc.cpp
source/render/: color.cpp  font.cpp  render.cpp
source/ui/: menu.cpp  menuElement.cpp
